<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/pizzaSizeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pizzaSizeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size_of_the_pizza"
                        android:textAlignment="viewStart"
                        android:textSize="24sp" />

                    <RadioGroup
                        android:id="@+id/rdioGrp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/p6Slices"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/six_slices" />


                        <RadioButton
                            android:id="@+id/p8Slices"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/eight_slices" />

                        <RadioButton
                            android:id="@+id/p10Slices"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ten_slices" />

                        <RadioButton
                            android:id="@+id/p12Slices"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/twelve_slices" />

                    </RadioGroup>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pizzaExtraCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/toppingsTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/toppings"
                            android:textAlignment="viewStart"
                            android:textSize="24sp" />


                        <Spinner
                            android:id="@+id/toppings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/toppings"
                            android:minWidth="200dp"
                            android:minHeight="48dp" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/xtraCheese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_cheese_5" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/delivery"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/include_delivery_5" />

                        <EditText
                            android:id="@+id/specialInstructions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            android:text="@string/special_instructions" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/contactDetailsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/contactDetailsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_details"
                        android:textAlignment="viewStart"
                        android:textSize="24sp" />


                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="name"
                        android:ems="10"
                        android:hint="@string/contact_details"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/contact_name" />

                    <EditText
                        android:id="@+id/postalAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalAddress"
                        android:ems="10"
                        android:hint="@string/address"
                        android:inputType="textAutoComplete"
                        android:minHeight="48dp"
                        android:text="@string/address" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:ems="10"
                        android:inputType="phone"
                        android:minHeight="48dp"
                        android:text="@string/phone_number" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:text="@string/email_address" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
